appimage first attempt

--- a/openspace/openspace.desktop
+++ b/openspace/openspace.desktop
@@ -4,7 +4,7 @@ Exec=OpenSpace
 Name=OpenSpace
 Comment=Open source astrovisualization project
 Icon=openspace
-Categories=Application;Science;Graphics;
+Categories=Science;
 StartupWMClass=SGCT
 Terminal=false
 
